--- a/frontend/src/Pages/CSS/ShopCategory.css
+++ b/frontend/src/Pages/CSS/ShopCategory.css
@@ -2,7 +2,7 @@
 .shopcategory-banner{
     display:block;
     margin: 30px auto;
-    width:82%;
+    width:90%;
 }
 .shopcategory-indexsort{
     display:flex;
@@ -21,11 +21,11 @@ span{
     font-weight:bold;
 }
 .shopcategory-products{
-    margin:20px 170px;
+    margin:20px 90px;
     display:grid;
     grid-template-columns:1fr 1fr 1fr 1fr;
     row-gap:80px;
-    gap:20px;;
+    gap:20px;
 }
 
 .shopcategory-loadmore{
