CartItem.jsx add to cart calculation is added in shopcontext and import here,then we improved some css of hro.css navbar.css and productdisplay.css

--- a/frontend/src/Components/CartItems/CartItems.css
+++ b/frontend/src/Components/CartItems/CartItems.css
@@ -19,6 +19,7 @@
     font-weight:600;
 }
 
+
 .cartitems-format{
     font-Size:17px;
     font-weight:500;
@@ -37,4 +38,67 @@
     height:50px;
     border:2px solid #ebebeb;
     background:white;
+}
+
+.cartitems-down{
+    display:flex;
+    margin:100px 0px;
+}
+.cartitems-total{
+    flex: 1;
+    display:flex;
+    flex-direction:column;
+    margin-right:200px;
+    gap:40px;
+}
+.cartitems-total-item{
+    display:flex;
+    justify-content:space-between;
+    padding:15px 0px;
+}
+.cartitems-total button{
+    width:262px;
+    height:58px;
+    outline:none;
+    border:none;
+    background:#ff5a5a;
+    color:#fff;
+    font-Size:16px;
+    font-weight:600;
+    cursor:pointer;
+}
+.cartitems-promocode{
+    flex:1;
+    font-Size:16px;
+    font-weight:500;
+}
+.cartitems-promocode p{
+    color:#555;
+}
+
+.cartitems-promobox{
+    width:504px;
+    margin-top:15px;
+    padding-left:20px;
+    height:58px;
+    background:#eaeaea;
+
+}
+
+.cartitems-promobox input{
+    border:none;
+    outline:none;
+    background:transparent;
+    font-Size:16px;
+    width:330px;
+    height:50px;
+   
+}
+.cartitems-promobox button{
+     width:170px;
+    height:58px;
+    font-Size:16px;
+    background:black;
+    color:white;
+    cursor:pointer;
 }
